welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: type mismatch;
 found   : Int(1)
 required: Boolean
{	if (nums(i) == 2 && nums(i+1)== 7 && nums(i+2) == 0 |1|2|3) {return true}
                                                             ^